--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <h1>YouTube Video Downloader</h1>
         <div class="download-section">
             <p>Please use our Telegram bot to download videos:</p>
-            <a href="https://t.me/your_bot_username" class="download-button">Open Telegram Bot</a>
+            <a href="https://t.me/YouTubeDownloader76_bot" class="download-button">Open Telegram Bot</a>
         </div>
         <div id="error-container"></div>
     </div>
