--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             transform: scale(1.05);
         }
     </style>
+    <base href="/YTBot/">
 </head>
 <body>
     <div class="container">
