--- a/404.html
+++ b/404.html
@@ -47,7 +47,7 @@
         <h1>404 - Page Not Found</h1>
         <p>The file you're looking for might have been deleted or moved.</p>
         <p>Please try downloading the file again through our Telegram bot.</p>
-        <a href="/" class="back-button">Go Back Home</a>
+        <a href="/YTBot/" class="back-button">Go Back Home</a>
     </div>
 </body>
 </html>
